Finish first draft.

--- a/ms_neurips_2019/ms_neurips_2019.tex
+++ b/ms_neurips_2019/ms_neurips_2019.tex
@@ -75,45 +75,47 @@
 \maketitle
 
 \begin{abstract}
-We present a novel method for encoding compositional information by recursively interweaving high-dimensional (HD) random vectors. Inspired by chromosomal crossover, a fraction of one vector's components are masked out and replaced by those from another, via a context-dependent mask. Unlike most HD computing schemes, "crossover" codes highly overlap their base elements' and sub-structures' codes yet without sacrificing relational information, allowing direct element recovery and decoding by greedy reconstruction. Crossover is mathematically tractable and has several properties desirable for robust, flexible representation.
+We present a novel method for encoding compositional information by recursively weaving together high-dimensional (HD) random vectors. Inspired by chromosomal crossover, a fraction of one vector's components are masked out and replaced by those from another, via a context-dependent mask. Unlike most HD computing schemes, "crossover" codes highly overlap with their base elements' and sub-structures' codes yet without sacrificing relational information, allowing fast element readout and decoding by greedy reconstruction. Crossover is mathematically tractable and has several properties desirable for robust, flexible representation.
 \end{abstract}
 
 \section{Introduction}
 
-A common problem faced by intelligent systems is how to encode objects of variable complexity in fixed dimensions. Ideally, similar objects should have similar codes, new object codes should not degrade existing ones, and there should be no hard object complexity limit. Distributing codes across high-dimensional (HD) vectors yields robustness and potential flexibility and generalization \cite{Hinton:1984, Mikolov:2013}, but how does one encode order or binding relations (key to composition) in such a code, e.g. to distinguish AB vs BA or (AB, CD) vs (AC, CB), respectively? While trained networks have some implicit capacity for this \cite{language network}, it is unclear (1) how such networks might encode complexity beyond that in their training data, and (2) how to quantify internal network representations. An alternative approach, known as HD computing (HDC), is to assign \textit{random} vector codes to a set "base" elements of the data (e.g. symbols), and rules for composing these into richer data structures (e.g. words) \cite{Plate, Kanerva, Gayler}. HDC's advantages are (1) random HD vectors are nearly orthogonal with high probability, enabling a large element codebook, (2) there is no hard limit on data complexity, and (3) encoding is often mathematically tractable. Thus, while a useful system would of course require some training on environment statistics, HDC provides a compelling blueprint for representational flexibility.
+A common problem faced by intelligent systems is how to encode objects of variable complexity in fixed dimensions. Ideally, similar objects should have similar codes, new objects should not require rearranging existing codes, and there should be no limit on object complexity. Distributing codes across high-dimensional (HD) vectors yields robustness and potential flexibility and generalization \cite{Hinton:1984, Mikolov:2013}, but how does one impose compositional relations, like \textit{order} or \textit{binding} in such a code, e.g. to distinguish AB vs BA or (AB, CD) vs (AC, CB), respectively? While trained networks have some implicit capacity for this \cite{Bahdanau:2014, Luong:2015, Wu:2016}, it is unclear (1) how such networks might encode complexity beyond that of their training data, and (2) how to quantify internal network function \cite{Lipton:2017}. An alternative approach, known as HD computing (HDC), is to assign \textit{random} vector codes to a set of "base" elements of the data (e.g. symbols), and rules for composing these into richer data structures (e.g. words) \cite{Plate:1995, Kanerva:2009, Gayler}. HDC's advantages are (1) random HD vectors have low overlap with high probability, enabling a large element codebook, (2) there is no hard limit on data complexity, and (3) encoding is often mathematically tractable. While a useful system would of course require some training on environment statistics, HDC provides a compelling blueprint for representational flexibility.
 
-Most HDC schemes are based on relational codes that little overlap their element codes (e.g. $AB$'s code is distinct from $A$'s and $B$'s), yet from which the relations can be readily recovered. Examples of typical relation-encoding operations include circular convolution \cite{Plate}, permutation \cite{Sahlgren, Gayler}, or matrix multiplication \cite{Gosmann}. Because of this non-overlap, elements cannot be directly recovered from the relation code (although see \cite{Rachkovskij:2001}), and such a scheme conflicts with our desire that $AB$ should resemble $A$ more than $C$. Here, we present a new way (to our knowledge) to encode relations (and arbitrary compositions), where two vectors $X^A$ and $X^B$ are ordered or bound by masking out a fraction of $X^A$'s components and replacing them with those from $X^B$, analogous to chromosomal crossover, with relational information encoded in a context-dependent mask $\mu(X^A, X^B)$. "Crossover" composition codes highly overlap with the substructures and base elements used to build them, allowing direct recovery of elements and decoding by greedy reconstruction. Further, they distribute information evenly across components and have statistics invariant to object complexity, suggesting utility for robust intelligent systems. We focus on sequences first, then generalize to binding and trees.
+Most HDC schemes are based on codes in which relations among elements can be readily recovered, but only if one provides certain elements themselves as cues. Typical relation-encoding operations include circular convolution \cite{Plate}, permutation \cite{Sahlgren, Gayler}, or matrix multiplication \cite{Gosmann}, which preserve relational information by creating relation codes that little overlap their elements (e.g. AB's code is distinct from A's and B's). This low overlap means elements cannot be directly recovered from the relation code (although see \cite{Rachkovskij:2001}), and it conflicts with our desire that AB should resemble A and B more than C. Here, we present a new way (to our knowledge) to encode compositional relations, where two HD vectors $X$ and $X'$ are ordered or bound by masking out a fraction of $X$'s components and replacing them with those from $X'$, analogous to chromosomal crossover, and with relational information encoded in the context-dependent mask $\mu(X, X')$. As a result, "crossover" composition codes highly overlap with the substructures and elements used to build them, allowing direct recovery of base elements and decoding by greedy reconstruction. Further, they distribute information evenly across components and have marginal statistics invariant to object complexity, suggesting utility for robust intelligent systems. We describe crossover for sequences first, then generalize to binding and trees.
 
-\section{Sequence encoding}
+\section{Results}
 
-Let $X$ be a vector of $N$ components, each of which can take any of $Z$ states, $x_j \in G \equiv \{1,...,Z\}$, and let $d(X^A, X^B)$ be the Hamming distance from $X^A$ to $X^B$. For a symbol sequence $Y = (y_1, ..., y_L)$, where $y_t \in D \equiv \{1, ..., M\}$, we establish a mapping from $Y$ to $X^Y$ as follows:
+Let $X$ be a vector of $N$ components, each of which can take any of $Z$ states, $x_j \in G \equiv \{1,...,Z\}$, and let $d(X, X')$ be the Hamming distance from $X$ to $X'$. For a symbol sequence $Y = (y_1, ..., y_L)$, where $y_t \in D \equiv \{1, ..., M\}$, we establish a mapping from $Y$ to $X^Y$ as follows:
 
-First sample a codebook $C \equiv \{X^1, ..., X^M, X^*\}$, where $X^*$ is a "start code", and $x^j$ are i.i.d. across all components and codes and sampled uniformly from $G$. Next sample a mask function $\mu$, an $N \times M^{2N}$ matrix with i.i.d. real-valued elements from $\textrm{Uniform}(0, 1)$, which we reference as $\mu_j(X^A, X^B)$. In practice, columns of $\mu$ can be sampled "as needed" with a hash function.
+First sample a codebook $C \equiv \{X^1, ..., X^M, X^*\}$, where $X^*$ is a "start code", and $x^j$ are i.i.d. across all components and codes and sampled uniformly from $G$. Next sample a mask function $\mu$, an $N \times M^{2N}$ matrix with i.i.d. real-valued elements from $\textrm{Uniform}(0, 1)$, which we reference as $\mu_j(X, X')$. In practice, columns of $\mu$ can be sampled "as needed" with a hash function.
 
-Using $C$ and $\mu$ we construct sequence codes as described in Algorithm 1 and Figure 1:, symbol codes are recursively woven into the constructed code by replacing a fraction of the current code's components with those from the symbol code; which specific components are replaced depends on the current and symbol codes (the context). We decrease the fraction as $1/(t+1)^\gamma$, for $\gamma \geq 1$ to prevent exponential decay of the first symbol's similarity to the final code.
+Using $C$ and $\mu$ we encode sequences as in Alg 1 and Fig 1a: symbol codes are recursively woven into the final code by replacing a fraction of the current code's components with those from the symbol code; which components are replaced encodes sequence order. We decrease the fraction as $1/(t+1)^\gamma$, for $\gamma \geq 1$ to prevent exponential decay of the first symbol's presence in the final code.
 
 \begin{algorithm}
 \caption{Sequence Encoding}
+\label{alg:1}
 
 \begin{algorithmic}[0]
-\Function{CrossoverSeq}{$X^A, X^B; t$}
+\Function{CrossoverSeq}{$X, X'; t$} $\rightarrow X''$
 
-\State $mask \gets (\mu(X^A, X^B) < 1/(t+1)^\gamma) \quad$  \# context-dependent mask w/ about $1/(t+1)^\gamma$ 1's
-\State $X^{AB} \gets X^A$
-\State $X^{AB}[mask] \gets X^B[mask] \quad$  \# replace $X^A$'s masked components $X^B$'s
+\State $mask \gets (\mu(X, X') < 1/(t+1)^\gamma) \quad$  \# context-dependent mask with about $1/(t+1)^\gamma$ 1's
+\State $X'' \gets X$
+\State $X''[mask] \gets X'[mask] \quad$  \# replace $X$'s masked components with those from $X'$
 
-\State \textbf{return} $X^{AB}$
 \EndFunction
 
-\Function{EncodeSequence}{$Y$}
+\State 
+
+\Function{EncodeSequence}{$Y$} $\rightarrow X^Y$
+
 \State $X^Y \gets X^*$
 \For{$t \in 1, ..., |Y|$}
 
-\State $X^Y \gets CrossoverSeq(X^Y, X^{y_t}, t)$
+\State $X^Y \gets \textrm{CrossoverSeq}(X^Y, X^{y_t}, t)$
 
 \EndFor
 
-\State \textbf{return} $X^Y$
 \EndFunction
 
 \end{algorithmic}
@@ -122,28 +124,46 @@ Using $C$ and $\mu$ we construct sequence codes as described in Algorithm 1 and 
 \begin{figure}
   \centering
   \includegraphics{1_sequences.pdf}
-  \caption{Sequence encoding via crossover ($N=1024, Z=8, M=26, \gamma=1$). (a) Example encoding of CAFE; colors are states, inscribed symbols are visual aids, not used by the algorithm. (b) Sequence-symbol code distances. (c) State distributions for a short and long sequence. (d, e) Distances of CAFE's and CICADA's code to other sequence codes. (f) Decoding vs code corruption.}
+  \caption{Sequence encoding via crossover ($N=1024, Z=8, M=26, \gamma=1$). (a) Example encoding of CAFE; colors are states, inscribed symbols are visual aids, not used by the algorithm. (b) Sequence-symbol code distances. (c) State distributions for a short and long sequence. (d, e) Distances of CAFE's and CICADA's code to other sequence codes. (f) Decoding vs code corruption. All plots here and elsewhere were made via 100 samples of $C, \mu$. "*" prefixes indicate sequences.}
+  \label{fig:1}
 \end{figure}
 
+For $\gamma = 1$, $d(X^Y, X^i) \sim \textrm{Binomial}(N, 1-q)/N$, with $q = P(x^Y_j = x^i_j) = n^i/(L+1) + (1/Z)(L+1-n^i)/(L+1)$; $n^i$ is how often $i$ appears in $Y$. I.e. for large $Z$, mean symbol-sequence similarity (over $C, \mu$) scales with the symbol's count within the sequence (Fig 1b), with variance $\sim 1/N$. As exemplified by Fig 1c, crossover code components are uniform over $G$, i.i.d. for a given $Y$, and invariant to sequence statistics (e.g. length). The proof follows from the i.i.d. nature of $C, \mu$ and the interchangeability of component states, and suggests crossover as a robust, scale-invariant encoding.
+
+For two sequences $Y$ and $Y'$ sharing their first $t$ symbols, $d(X^Y, X^{Y'})$ is also a scaled Binomial variable, and $q$ can be computed exactly for arbitrary $\gamma$; we present the $\gamma = 1$ case here. Let $\mathbf{n}_u$ be the length-$M$ symbol count vector for $Y_{1:t} = Y'_{1:t}$ with $\mathbf{1}^T\mathbf{n}_u = t$, and $\mathbf{n}_v$ and $\mathbf{n}_{v'}$ be the symbol count vectors for $Y_{t+1:L}$ and $Y'_{t+1:L'}$, respectively, with $\mathbf{1}^T\mathbf{n}_{v} = L - t$ and $\mathbf{1}^T\mathbf{n}_{v'} = L' - t$. Then:
+$$q \equiv P(x_j^Y = x_j^{Y'}) = \frac{t+1}{L+1}\frac{t+1}{L'+1} + \frac{1}{L+1}\frac{1}{L'+1}\left[\mathbf{n}^T_v\mathbf{n}_{v'} + \left((L-t)(L'-t) - \mathbf{n}^T_v\mathbf{n}_{v'} \right)\frac{1}{Z}\right]$$
+$$+\frac{1}{L+1}\frac{1}{L'+1}\left[
+\mathbf{n}^T_{u}\mathbf{n}_{v'} + \left((t+1)(L'-t) - \mathbf{n}^T_{u}\mathbf{n}_{v'} \right)\frac{1}{Z}
++ \mathbf{n}^T_{v}\mathbf{n}_{u} + \left((L-t)(t+1) - \mathbf{n}^T_{v}\mathbf{n}_{u} \right)\frac{1}{Z}
+\right]$$
+Consequently, for most $Y$, $X^Y$ overlaps little with $Y$'s anagrams, and more with correct than incorrect starting subsequences (Fig 1d,e): CICADA is closer to CI than CD and to CIC than CIA. This is because distinct next-symbol candidates yield different $\mu$, which quickly decreases overlap with $X^Y$ for out-of-order symbols. Thus, $Y$ is rapidly decoded by rebuilding $X^Y$ from $X^*$ if each rebuild step maximizes overlap with $X^Y$, until overlap stops increasing. Further, given a prior $P(Y)$, the mutual information between $x_j^Y$ and $Y$ is i.i.d. across $j$, yielding equivalent robustness to random and targeted attack, so decoding accuracy depends only on the number of corrupted components (Fig 1f).
+
+For $Y$ with many symbol repeats distinct from $y_1$ (e.g. REFEREE), $X^*$ crossed over with $X^{y_1}$ can be further from $X^Y$ than $X^*$ crossed with the repeated symbol, impairing decoding. Making $\gamma > 1$ fixes this by more heavily weighting early symbols (Fig 2a). Surprisingly, although this imbalanced weighting improves decoding of, say, ABBBBBB, it does not equivalently degrade decoding of AAAAAAB, and optimal $\gamma$ are shared across many sequences (Fig 2b).
+
 \begin{figure}
+\label{fig:2}
   \centering
   \includegraphics{2_gamma.pdf}
-  \caption{Crossover modifications. (a) Distance of *REFEREE to symbols/sequences for two $\gamma$. (b) Decoding vs. $\gamma$ for several sequences. (c) Decoding of *CAFE vs corrupted encoding for i.i.d. and correlated $\mu$. (d) Decoding of *CICADA for i.i.d., correlated $\mu$, and correlated $\mu$ with increased $N$.}
+  \caption{Crossover modifications ($N=1024, Z=8, M=26$). (a) Distance of *REFEREE to symbols/sequences for two $\gamma$. (b) Decoding vs. $\gamma$ for several sequences. (c) Decoding of *CAFE vs number of corrupted components at encoding step for i.i.d. and correlated $\mu$. (d) Decoding of *CICADA for i.i.d., correlated $\mu$, and correlated $\mu$ with increased $N$.}
 \end{figure}
+
+While crossover with i.i.d. $\mu$ is robust to noise added to the final code (Fig 1f), it fails when noise is added during encoding (Fig 2c,d), as one altered component yields an entirely different mask. This is fixed by introducing correlations into $\mu_j(X, X')$ (here making $\mu$ a function of sparse components of $X, X'$) (Fig 2c,d). The tradeoff is decreased decoding accuracy for certain sequences, since correlated masks are less distinct, but this can be corrected via increased $N$.
+
+Beyond sequences, crossover naturally generalizes to nested structures, i.e. trees. Key to tree encoding is \textit{binding} elements together into groups that can themselves be bound together, yet without erasing the initial group identities, e.g. (AB, CD) must not be confused with (AD, CB). In crossover, $k$ elements $i_0, ..., i_k$ can be bound through a context-dependent mask function $\mu(X^{i_0}, .... X^{i_k})$ (which can be made to commute if order does not matter). The output vector then borrows components from $X^{i_0}$ where $0 < \mu < 1/k$, from $X^{i_1}$ where $1/k < \mu < 2/k$, etc. These outputs are then bound themselves in the exact same manner (Fig 3a), an operation which can be applied recursively according to the tree depth. The result is a vector overlapping more with included than excluded elements, and with included than excluded groups, even if the latter are made from the same base elements (Fig 3b). Generally, a tree encoding by crossover will also overlap more with its included sub-trees than with alternative sub-trees of equal complexity. Similar to sequence encoding, this means that both base elements and their recursive relationships can be extracted well from the crossover code, and that decoding of the full tree can occur through a recursive, but greedy reconstruction.
 
 \begin{figure}
+\label{fig:3}
   \centering
   \includegraphics{3_trees.pdf}
-  \caption{Tree encoding via crossover ($N=1024, Z=8, M=26$). (a) Example encoding of (AB, CD, EF). (b) Similarity between final code and element and sub-tree codes.}
+  \caption{Tree/binding encoding via crossover ($N=1024, Z=8, M=26$). (a) Example crossover encoding of (AB, CD, EF). (b) Distances of final code to element and bound-pair codes.}
 \end{figure}
-
 \section{Discussion}
 
-While an intelligent agent must learn environmental statistics to some extent, it can be desirable to certain computations built-in instead of learned from scratch \cite{Zador:2019}. Flexible composition is particularly useful, since lets an agent compute with novel objects/events if they are composed of familiar elements \cite{Jackendoff, Gayler}: it would benefit an autonomous vehicle to be able to automatically generate and manipulate a representation of "child on scooter behind car in front of bus", even if previously it had only worked with any of the constituent elements in isolation. Computationally, basing neural network training protocols on built-in HDC codes for composition \cite{Plate} to learn knowledge graphs yielded more efficient computation, easy training, and high scalability \cite{Nickel:2015}. It stands to reason that improving HDC codes may improve network training further still.
+While intelligent systems must generally learn the environment statistics to operate, it can be desirable for some features of computation to be built-in automatically \cite{Zador:2019}. Flexible composition codes are useful because they provide a substrate for an agent to compute with novel objects/events if they are composed of familiar elements. For instance, an autonomous vehicle should be able to construct and manipulate a representation of "child on scooter behind car in front of bus", even if previously it had only worked with the isolated scene elements. While many trained systems, e.g. translation networks \cite{Bahdanau:2014, Luong:2015, Wu:2016}, have some capacity for compositional encoding (otherwise outputs would be out-of-order), it is unclear how they could handle complexity beyond their training data, and it is notoriously difficult to understand the structure of their internal representations \cite{Zeiler:2013, Montavon:2018}. Alternatively, one can take the HDC approach of designing algorithms with \textit{a priori} flexibility, then attach or embed them in trainable systems. Basing a training protocol on convolutional binding, for instance, allowed an artificial network to learn knowledge graphs more efficiently and scalably than other methods \cite{Nickel:2015}. It stands to reason that identifying robust HDC codes could provide a useful backbone for improving artificial systems, as well as for directing our investigation of neural computation in biology.
 
-As it was discovered early that sums of HD random vectors could encode \textit{sets}, due to high similarity to their components \cite{Bloom:1970, Anderson:1973, Plate:1994}, most HDC work has focused on relations, like sequences or bindings. Perhaps best known are holographic representations \cite{Plate:1995}, where element vectors are bound by circular convolution. Additional proposed binding operations are base on XOR (for binary vectors) \cite{Kanerva:1996}, permutation \cite{Gayler:1998}, or matrix multiplication \cite{Gosmann:2019}. To encode order, convolution can be slightly modified \cite{Murdock:1983, Plate:1995} or prior to summing each element can first be tagged via permutation \cite{Sahlgren:2008} or binding to location tokens \cite{Kanerva:1996}. While such schemes preserve recoverable relational information, the composite vectors are dissimilar to their elements, preventing recovery of the elements from their similarity to the composite vector. An exception is "context-dependent thinning" (CDT), where elements are bound by summing them, then "stamping" them with a set of zeros dependent on the sum \cite{Rachkovskij:2001}; while the stamp shape retains binding information, however, information beneath its imprint is discarded, partially degrading the desired similarities; and it is not clear how CDT could be used to construct recursive sequence codes without early elements' similarities decaying exponentially. The scheme presented in this paper, termed "crossover", overcomes these limitations, preserving similarity to element and sub-structure codes without sacrificing relational information; further, the sequence code automatically prevents early element similarities from being lost, improving decodability. Beyond this, crossover codes have i.i.d. information across the vector components, and code statistics are invariant to object complexity. Crossover might thus be a useful blueprint for a robust cognitive system capable of working with arbitrary objects.
+"Crossover" shares advantages with existing HDC schemes but is distinct in key ways also. Like other schemes, crossover preserves relational information among elements, which is readily recoverable from the final code \cite{Kanerva:2009}. Further, relation codes can be reused as elements themselves, allowing arbitrary deep recursive composition \cite{Kanerva:2009}; in crossover one can add CAFE to the dictionary (perhaps with minor noise added), enabling encoding of longer sequences made from shorter ones. To encode relations, however, previous schemes have relied on circular convolution \cite{Plate:1995}, XOR (for binary vectors) \cite{Kanerva:1996}, permutation \cite{Sahlgren:2008, Gayler:1998}, or matrix multiplication \cite{Gosmann:2019}, which yields relation codes that little overlap their elements. While these distinguish different compositions of the same elements and allow cue-based recall, base elements cannot be identified directly from their overlap with the relation code, and instead require additional storage. An exception is "context-dependent thinning" (CDT), which stores relations via the union of the elements, then "stamping" the code with a context-dependent set of zeros \cite{Rachkovskij:2001}; while the stamp shape retains relational information, however, information beneath its imprint is discarded, and it is not clear how CDT could construct recursive sequence codes without early elements decaying exponentially. Crossover overcomes these limitations, as both elements and their relations can be read out directly, and in sequences no element overlaps decay exponentially. Further, crossover codes have i.i.d. information across code components, and code statistics are invariant to object complexity, suggesting they might be a useful representation for a robust intelligent system.
 
-We close by discussing HDC's potential implementation in biological neural networks. Of key interest is the working memory (WM) system, which must generate and maintain representations of novel objects (e.g. a never-before-heard question) on the fly. It has been hypothesized that information persists in WM through persistent patterns of neural activity \cite{Chaudhuri Nat Neuro}. While certain networks can support the combinatorial persistent patterns required for composition \cite{papers from CSHL application}, how they might carry meaning is little understood. HDC suggests an answer: by decomposing such patterns into independent components and assigning these to the components of an HDC vector, one could map the space of HDC representations to plausible neural activity, so that the latter inherited HDC's representational flexibility. This could provide a robust, expressive reservoir of neural representations that could be manipulated by recurrent computations.
+Crossover is also conceptually distinct from its predecessors since one need not define arithmetical operations over code components. Whereas previous HDC algorithms require summing components, either directly or through convolution \cite{Plate:1995, Kanerva:1996, Gayler:1998, Rachkovskij:2001, Sahlgren:2008, Gosmann:2019}, crossover's component states $1, ..., Z$ are just labels, with no numeric value; they need only a comparison operation. Crossover thus outlines a distributed computation substrate that can exist outside vector spaces, and instead within more generic metric spaces. This is relevant to biological implementation, as it allows one to envision code components not only as firing rates of neurons or populations, but also as neural assembly states that might not make sense to add, multiply, or rank. For instance, each component of a crossover code could correspond to the attractor state of a 100-neuron Hopfield-like assembly \cite{Hopfield:1982}, with the collective state of a pool of $N$ such assemblies encoding a sequence or tree. Such could serve, for instance, as a crude implementation of a combinatorially expressive working memory substrate, yet with sufficient code overlap statistics to be usefully read out and manipulated by downstream and recurrent computations.
 
 \subsubsection*{Acknowledgments}
 
